--- a/share/qtvcp/screens/qtdragon_hd/qtdragon_hd.ui
+++ b/share/qtvcp/screens/qtdragon_hd/qtdragon_hd.ui
@@ -176,6 +176,41 @@
       <property name="runFromLineDialog_option" stdset="0">
        <bool>true</bool>
       </property>
+      <property name="user1Color" stdset="0">
+       <color alpha="150">
+        <red>255</red>
+        <green>255</green>
+        <blue>255</blue>
+       </color>
+      </property>
+      <property name="user2Color" stdset="0">
+       <color>
+        <red>255</red>
+        <green>144</green>
+        <blue>0</blue>
+       </color>
+      </property>
+      <property name="user3Color" stdset="0">
+       <color>
+        <red>255</red>
+        <green>138</green>
+        <blue>150</blue>
+       </color>
+      </property>
+      <property name="user4Color" stdset="0">
+       <color alpha="150">
+        <red>255</red>
+        <green>170</green>
+        <blue>0</blue>
+       </color>
+      </property>
+      <property name="user5Color" stdset="0">
+       <color alpha="150">
+        <red>255</red>
+        <green>0</green>
+        <blue>0</blue>
+       </color>
+      </property>
       <property name="halCompBaseName" stdset="0">
        <string>qtdragon</string>
       </property>
@@ -17256,7 +17291,7 @@ ANGULAR</string>
          <number>2</number>
         </property>
         <property name="text">
-         <string>12:06:34 PM</string>
+         <string>02:47:56 AM</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -18427,8 +18462,8 @@ ANGULAR</string>
   <slot>btn_pause_clicked()</slot>
  </slots>
  <buttongroups>
+  <buttongroup name="mode_buttonGroup"/>
   <buttongroup name="page_buttonGroup"/>
   <buttongroup name="buttonGroup"/>
-  <buttongroup name="mode_buttonGroup"/>
  </buttongroups>
 </ui>
